[v0.0.2 - 01/01/2011]
  - Séléction d'un design, mise en place d'ici peut
  - Mise en place d'un système de nom de page par tableau

[v0.0.1 - 31/12/2010]
  - Création du porjet
  - Mise en place de la configuration
  - Création de la connexion a la base de donnée
  - Création d'une première structure du site