@@ -1,6 +1,7 @@
 [v0.0.2 - 01/01/2011]
   - Séléction d'un design, mise en place d'ici peut
   - Mise en place d'un système de nom de page par tableau
+  - Création du script qui inclus les pages
 
 [v0.0.1 - 31/12/2010]
   - Création du porjet
